fix: overflow

--- a/singolo2.css
+++ b/singolo2.css
@@ -61,7 +61,8 @@ button {
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 6px;
-    height: 620px;    
+    height: 620px;
+    overflow: hidden;
 }
 .portfolio-item {
     width: 220px;
